# GoAI

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Board.cpp  Board.h  Board.vcxproj  Board.vcxproj.filters  CMakeLists.txt  CaptureGenerator.cpp  CaptureGenerator.h  CommandLinePlayer.cpp  CommandLinePlayer.h  CommandLinePlayer.vcxproj  CommandLinePlayer.vcxproj.filters  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  Go.sln  Go.vcxproj  Go.vcxproj.filters  Gtp.cpp  Gtp.h  MonteCarloNode.cpp  MonteCarloNode.h  MonteCarloPlayer.cpp  MonteCarloPlayer.h  Move.cpp  Move.h  Move.vcxproj  Move.vcxproj.filters  MoveGenerator.cpp  MoveGenerator.h  MoveType.h  PatternGenerator.cpp  PatternGenerator.h  Player.cpp  Player.h  RandomPlayout.cpp  RandomPlayout.h  (+5 more)
